# RomanticOS

./: Cargo.toml  Makefile  README.md  build.sh  filesystem.rs  gdt.rs  interrupts.rs  kernel.ld  keyboard.rs  process.rs
.cargo/: config.toml
doc/: ARCH.md  DEV.md  OV.md  README.md
iso/boot/grub/: grub.cfg
src/: boot.rs  demo.rs  filesystem.rs  main.rs  memory.rs  mod.rs  process.rs  syscall.rs
src/drivers/: avg.rs  mod.rs  timer.rs  vga.rs
